@@ -1,6 +1,6 @@
 {
   "name": "simp-aide",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "author": "SIMP Team",
   "summary": "manages AIDE",
   "license": "Apache-2.0",
